--- a/css/style.css
+++ b/css/style.css
@@ -773,13 +773,13 @@ b i:last-child {
     padding: 5px 20px;
     border-radius: 25px;
     color: #333;
-    margin-top: 10px;
+    margin-bottom: 40px;
     -webkit-transform: translateX(-100px);
     transform: translateX(-100px);
     -webkit-transition: all .3s ease-in-out .3s;
     transition: all .3s ease-in-out .3s;
     opacity: 0;
-    font-size: 10px;
+    font-size: 11px;
     letter-spacing: 2px;
 }
 
